implemented endpoint for removing template from project
