# src/main/resources/openapi.yml
@@ -174,6 +174,33 @@ paths:
         '404':
           description: Not Found - Template or Project not found
 
+  /project/remove-template/{projectId}:
+    put:
+      tags:
+        - Project
+      summary: Remove template from project
+      operationId: removeTemplateFromProject
+      description: Update an existing project with the provided ID to not have a template
+      parameters:
+        - name: projectId
+          in: path
+          description: ID of the project to retrieve
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Project updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Project'
+        '401':
+          description: Unauthorized - user is does not have permission to edit this project
+        '404':
+          description: Project not found
+
 #Media
   /media:
     put:
